Cleanup build.gradle and update dependencies