@@ -36,29 +36,25 @@ ext {
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    // api 'org.apache.commons:commons-math3:3.6.1'
-
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2' // Need 1.8 for modules
-    runtime group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta2'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2' // Need 1.8 for modules
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta2'
     
     // jHDF lib
-	compile group: 'io.jhdf', name:'jhdf',version: '0.2.+'
+	implementation group: 'io.jhdf', name:'jhdf',version: '0.3.+'
   
    	// Java FX dependices
-	compile group: 'org.openjfx', name: 'javafx-base', version: "${javafxVersion}", classifier: "${osName}"
-	compile group: 'org.openjfx', name: 'javafx-controls', version: "${javafxVersion}", classifier: "${osName}"
-	compile group: 'org.openjfx', name: 'javafx-fxml', version: "${javafxVersion}", classifier: "${osName}"
-	compile group: 'org.openjfx', name: 'javafx-graphics', version: "${javafxVersion}", classifier: "${osName}"
+	implementation group: 'org.openjfx', name: 'javafx-base', version: "${javafxVersion}", classifier: "${osName}"
+	implementation group: 'org.openjfx', name: 'javafx-controls', version: "${javafxVersion}", classifier: "${osName}"
+	implementation group: 'org.openjfx', name: 'javafx-fxml', version: "${javafxVersion}", classifier: "${osName}"
+	implementation group: 'org.openjfx', name: 'javafx-graphics', version: "${javafxVersion}", classifier: "${osName}"
 }
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     jcenter()
-
 }
 
 jar {
@@ -73,17 +69,6 @@ jar {
 application {
     mainClassName = "io.jhdf.fx.Test"
 }
-
-/* compileJava {
-    inputs.property("moduleName", 'jhdfx')
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls',
-        ]
-        classpath = files('/home/james/git/jhdf.git/jhdf/build/libs')
-    }
-} */
 
 task runApp(type: JavaExec) {
     main = 'io.jhdf.fx.Test'
